force-app/main/default/objects/ElementDeNomenclatureDeMaintenance__c/ElementDeNomenclatureDeMaintenance__c.object-meta.xml
<CustomObject>
    <description>Cet objet permet d&apos;ajouter des produits à la nomenclature de maintenance.</description>
    <label>Élément de nomenclature de maintenance</label>
    <nameField>
        <label>Nom de Élément de produit de nomenclature</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eléments de nomenclature de maintenance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>