force-app/main/default/objects/ElementDeNomenclatureDeMaintenance__c/fields/Code_article__c.field-meta.xml
<CustomField>
    <fullName>Code_article__c</fullName>
    <formula>ENM_Produit__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code article</label>
    <type>Text</type>
</CustomField>