force-app/main/default/objects/ElementDeNomenclatureDeMaintenance__c/fields/ENM_NomenclatureMaintenance__c.field-meta.xml
<CustomField>
    <fullName>ENM_NomenclatureMaintenance__c</fullName>
    <label>Nomenclature Maintenance</label>
    <referenceTo>NomenclatureMaintenance__c</referenceTo>
    <relationshipLabel>Eléments de nomenclature de maintenance</relationshipLabel>
    <relationshipName>Elements_de_nomenclature_de_maintenance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>