force-app/main/default/objects/ElementDeNomenclatureDeMaintenance__c/fields/ENM_Produit__c.field-meta.xml
<CustomField>
    <fullName>ENM_Produit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Eléments de nomenclature de maintenance</relationshipLabel>
    <relationshipName>Elements_de_nomenclature_de_maintenance</relationshipName>
    <type>Lookup</type>
</CustomField>