force-app/main/default/objects/ElementDeNomenclatureDeMaintenance__c/fields/ENM_Quantite__c.field-meta.xml
<CustomField>
    <fullName>ENM_Quantite__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Quantité</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>